--- a/HuskyFeeder2.ioc
+++ b/HuskyFeeder2.ioc
@@ -9,21 +9,23 @@ Mcu.IP1=RCC
 Mcu.IP2=SYS
 Mcu.IP3=TIM7
 Mcu.IP4=TIM11
-Mcu.IP5=USART2
-Mcu.IPNb=6
+Mcu.IP5=TIM12
+Mcu.IP6=USART2
+Mcu.IPNb=7
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PA2
 Mcu.Pin1=PA3
+Mcu.Pin10=VP_TIM11_VS_ClockSourceINT
 Mcu.Pin2=PA5
-Mcu.Pin3=PB0
-Mcu.Pin4=PA8
-Mcu.Pin5=PA9
-Mcu.Pin6=PB9
-Mcu.Pin7=VP_SYS_VS_Systick
-Mcu.Pin8=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin9=VP_TIM11_VS_ClockSourceINT
-Mcu.PinsNb=10
+Mcu.Pin3=PB14
+Mcu.Pin4=PB15
+Mcu.Pin5=PA8
+Mcu.Pin6=PA9
+Mcu.Pin7=PB9
+Mcu.Pin8=VP_SYS_VS_Systick
+Mcu.Pin9=VP_TIM7_VS_ClockSourceINT
+Mcu.PinsNb=11
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
@@ -31,7 +33,6 @@ MxCube.Version=6.5.0
 MxDb.Version=DB.6.0.50
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-NVIC.EXTI0_IRQn=true\:0\:0\:false\:true\:true\:1\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
@@ -41,6 +42,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:true
 NVIC.TIM1_TRG_COM_TIM11_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM8_BRK_TIM12_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 PA2.Locked=true
 PA2.Mode=Asynchronous
@@ -61,10 +63,13 @@ PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=HX711_PD_SCK
 PA9.Locked=true
 PA9.Signal=GPIO_Output
-PB0.GPIOParameters=GPIO_Label
-PB0.GPIO_Label=PIR_PIN
-PB0.Locked=true
-PB0.Signal=GPXTI0
+PB14.GPIOParameters=GPIO_Label
+PB14.GPIO_Label=HCSR04_ECHO
+PB14.Signal=S_TIM12_CH1
+PB15.GPIOParameters=GPIO_Label
+PB15.GPIO_Label=HCSR04_TRIGGER
+PB15.Locked=true
+PB15.Signal=GPIO_Output
 PB9.GPIOParameters=GPIO_Label
 PB9.GPIO_Label=Servo_PWM
 PB9.Signal=S_TIM11_CH1
@@ -96,7 +101,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM11_Init-TIM11-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM7_Init-TIM7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM11_Init-TIM11-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM7_Init-TIM7-false-HAL-true,6-MX_TIM12_Init-TIM12-false-HAL-true
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
 RCC.APB1Freq_Value=42000000
@@ -139,14 +144,18 @@ RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VCOSAIInputFreq_Value=1000000
 RCC.VCOSAIOutputFreq_Value=192000000
-SH.GPXTI0.0=GPIO_EXTI0
-SH.GPXTI0.ConfNb=1
 SH.S_TIM11_CH1.0=TIM11_CH1,PWM Generation1 CH1
 SH.S_TIM11_CH1.ConfNb=1
+SH.S_TIM12_CH1.0=TIM12_CH1,Input_Capture1_from_TI1
+SH.S_TIM12_CH1.ConfNb=1
 TIM11.Channel=TIM_CHANNEL_1
 TIM11.IPParameters=Prescaler,Period,Channel
 TIM11.Period=1000-1
 TIM11.Prescaler=1680
+TIM12.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
+TIM12.ICPolarity_CH1=TIM_INPUTCHANNELPOLARITY_BOTHEDGE
+TIM12.IPParameters=Channel-Input_Capture1_from_TI1,Prescaler,ICPolarity_CH1
+TIM12.Prescaler=83
 TIM7.IPParameters=Prescaler
 TIM7.Prescaler=83
 USART2.BaudRate=9600
