Tested Serving and Wait For Deadline
-Added App DBG flags
-Added Main tests
-Fixed Servo Prescaler and bug in angle validity check

--- a/HuskyFeeder2.ioc
+++ b/HuskyFeeder2.ioc
@@ -151,7 +151,7 @@ SH.S_TIM12_CH1.ConfNb=1
 TIM11.Channel=TIM_CHANNEL_1
 TIM11.IPParameters=Prescaler,Period,Channel
 TIM11.Period=1000-1
-TIM11.Prescaler=1680
+TIM11.Prescaler=1680-1
 TIM12.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM12.ICPolarity_CH1=TIM_INPUTCHANNELPOLARITY_BOTHEDGE
 TIM12.IPParameters=Channel-Input_Capture1_from_TI1,Prescaler,ICPolarity_CH1
